--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ lerna-debug.log*
 # temp directory
 .temp
 .tmp
+
+frontend/node_modules
+frontend/dist
+frontend/build
+frontend/tmp
+
+backend/node_modules
+backend/dist
+backend/build
+backend/tmp
+
+backups/mongo
